<resources>
    <string name="app_name">Session_violetta</string>
    <string name="Price_Platye">900 рублей</string>
    <string name="PodHeader">Корзина</string>
    <string name="values1">1</string>
    <string name="gg">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="Krosy_Opisanie1">Отличный выбор для динамичной и комфортной прогулки на любом покрытии и в любую погоду</string>
    <string name="minus">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="Shapka_Opisanye">Мягкая ткань, плотная вязка, подходит для холодной погоды. Не продувает в сильный ветер.</string>
    <string name="Header_Shapka">Шапка</string>
    <string name="todo7">TODO</string>
    <string name="Value_Shapka">1</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="Plat">Модный, с изображением красных губ, с О-образным вырезом без рукавов в стиле пин-ап</string>
    <string name="fila">Кроссовки Fila</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="_1">1</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="Header_Plat">Платье летнее</string>
    <string name="todo18">TODO</string>
    <string name="Button_FirstActivity">оплатить покупку</string>
    <string name="_1200">1200 рублей</string>
    <string name="_7000">7000 рублей</string>
    <string name="todo19">TODO</string>
    <string name="TextDostavkaAndOplata">Оплата и доставка заказа</string>
    <string name="EnterYourName">Введите ваше имя</string>
    <string name="EnterYourNumber">Введите ваш контактный номер</string>
    <string name="EnterYourAdress">Адрес доставки</string>
    <string name="Dostavka">Доставка</string>
    <string name="HowTakeZakaz">Как заберете заказ:</string>
    <string name="ThisIsTextOplata">Оплата</string>
    <string name="HowYouPayZakaz">Как оплатите заказ:</string>
    <string name="WellKOplate">Итого к оплате:</string>
    <string name="Delivery">Доставка</string>
    <string name="Samovivoz">Самовывоз</string>
    <string name="Nalichnie">Наличные</string>
    <string name="Maps">Карта</string>
    <string name="Rubleu9100">9100 рублей</string>
    <string name="PayZakaz">Оплатить заказ</string>
    <string name="Until">TODO</string>
    <string name="Antil">TODO</string>
    <string name="Nasizm">TODO</string>
    <string name="AdressCompany">г. Москва, ул. 9 мая, д. 28</string>
    <string name="TelephoneNumberGG">8-954-852-00-00</string>
    <string name="IWIRWIRW">TODO</string>
    <string name="gejeter">TODO</string>
    <string name="ewfweg">TODO</string>
    <string name="rtjrtjr">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>